# dataquest-insurance-brokerage-ai-assistant

./: package-lock.json  readme.md  tsconfig.tsbuildinfo
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/dashboard/ai-classification/: page.tsx
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  ml_pipeline.py  models.py  schemas.py  seed.py  seed_clients.py
backend/app/routers/: auth.py  classification.py  clients.py  dashboard.py  data.py  policies.py
components/classification/: prediction-result-panel.tsx  probability-distribution.tsx
components/dashboard/: ai-recommendations-card.tsx  client-distribution.tsx  compliance-card.tsx  empty-state.tsx  performance-chart.tsx
components/landing/: animated-background.tsx  demo-preview.tsx  navbar.tsx
components/layout/: dashboard-layout.tsx  top-bar.tsx
components/recommendation/: client-input-section.tsx  company-card.tsx  confidence-indicator.tsx  policy-card.tsx  policy-detail-drawer.tsx  recommendations-panel.tsx
data/: POLICIES.csv
front-end/: AI_RECOMMENDATION_GUIDE.md  package-lock.json  package.json  pnpm-lock.yaml
front-end/app/: globals.css
front-end/components/: auth-provider.tsx
front-end/data/: CLIENTS.csv  INSURANCE_COMPANIES.csv
front-end/lib/: api.ts  classification-data.ts  constants.ts  recommendation-data.ts
front-end/src/: main.py  model.joblib
lib/: animations.ts  classification-data.ts  recommendation-utils.ts
ml/configs/: config.yaml
ml/pipelines/: batch_pipeline.py  inference_pipeline.py
ml/test/: test_preprocessing.py
(+38 files in other folders)
